    * FIX: avoid duplicate output of log message in log tables
    * FIX: fixed problem with ldap userid encoding
    * FIX: removed state-based colors from all Perf-O-Meters
    * FIX: brocade_fcport pnp-template: fixed incorrect display of average values
    * FIX: all log views are now correctly sorted from new to old

    Livestatus-Proxy:
    * FIX: fix exception when printing error message
    * FIX: honor wait time (now called cooling period) after failed TCP connection
    * FIX: fix hanging if client cannot accept large chunks (seen on RH6.4)

    WATO:
    * Rule "State and count of processes": New configuration options:
           virtual and resident memory levels
    * Added title of tests to LDAP diagnose table
    * Bulk inventory: new checkbox to only include hosts that have a failed
        inventory check.
    * Bulk inventory: yet another checkbox for skipping hosts where the
        Check_MK service is currently critical
    * New rule: Multipath Count (used by esx_vsphere_hostsystem.multipath)
    * FIX: The rule "State and count of processes" is no longer available
           in "Parameters for inventorized check". This rule was solely
           intented for "Manual checks" configuration
    * FIX: Trying to prevent auth.php errors while file is being updated

1.2.3i2:
    Core:
    * New option -B for just generating the configuration
    * Introduced persistent host address lookup cache to prevent issues
      loading an unchanged configuration after a single address is not resolvable anymore
    * Assigning a service to a cluster host no longer requires a reinventory
    * Setting a check_type or service to ignore no longer requires a reinventory
      Note: If the ignore rule is removed the services will reappear
    * Config creation: The ignore services rule now also applies to custom, active
                       and legacy checks
    * Predictive monitoring: correctly handle spaces in variable names (thanks
       to Karl Golland)