@@ -94,6 +94,7 @@ class DISABLED: pass
 aggregation_functions = {}
 
 
+#.
 #   .----------------------------------------------------------------------.
 #   |             _____                 _   _                              |
 #   |            |  ___|   _ _ __   ___| |_(_) ___  _ __  ___              |
@@ -148,6 +149,7 @@ def load_config():
         include(p)
 
 
+#.
 # -------------------------------------------------------------------
 #    ____                     _         _
 #   |  _ \ ___ _ __ _ __ ___ (_)___ ___(_) ___  _ __  ___
